refactor: ScoreDto 추가

--- a/src/main/resources/templates/game.hbs
+++ b/src/main/resources/templates/game.hbs
@@ -525,8 +525,8 @@
     }
 
     function addScoreToDocument(scores) {
-        document.getElementById('player-score-black').innerText = scores.black.value;
-        document.getElementById('player-score-white').innerText = scores.white.value;
+        document.getElementById('player-score-black').innerText = scores.blackScore;
+        document.getElementById('player-score-white').innerText = scores.whiteScore;
     }
 </script>
 </html>
